--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<li><a href="#idportraitchinois">Portrait Chinois</a></li>
 			<li><a href="#idanecdote">Anecdote</a></li>
 		</ul>
-		<a href=file:///C:/Users/jeand/OneDrive/Bureau/Cours%201A/PPP/WebSite/Quiz/index.html class="btn">Quiz</a>
+		<a href=https://kisswave.github.io/TEST/ class="btn">Quiz</a>
 	</nav>
 	
 	
@@ -267,7 +267,7 @@
 	<section class="accesquiz" id="idaccesquiz">
 		<p>Vous pouvez désormais répondre au Quiz</p>
 		<div class="bouton-deux">
-			<a href=file:///C:/Users/jeand/OneDrive/Bureau/Cours%201A/PPP/WebSite/Quiz/index.html>Acceder au Quiz</a>
+			<a href=https://kisswave.github.io/TEST/>Acceder au Quiz</a>
 		</div>
 	</section>
 
