--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 			<li><a href="#idhobbies">Hobbies</a></li>
 			<li><a href="#idintelligence">Intelligence</a></li>
 			<li><a href="#idportraitchinois">Portrait Chinois</a></li>
-			<li><a href="#idanecdote">Anecdote</a></li>
 		</ul>
-		<a href=https://kisswave.github.io/TEST/ class="btn">Quiz</a>
+		<a href=https://github.com/KiSsWave/TEST/ class="btn">Quiz</a>
 	</nav>
 	
 	
@@ -55,8 +54,32 @@
 				
 				<p>J'ai 17 ans et je suis actuellement en première année de BUT Informatique à l'IUT Charlemagne à Nancy. Sur cette page vous aller pouvoir me connaitre de A à Z.</p>
 				<div class="versbas">
-					<a href="#idparcours"></a>
+					<a href="#idcourte"></a>
                 </div>
+			</div>
+		</div>
+	    <div class="courte" id="idcourte">
+			<div class="titre">
+				<h2 class="titrecourte"><span>Courte</span> Présentation</h2>
+			</div>
+			<div class="box1">
+				<div class="card2">
+					<div class="pracourte">
+						<p><span>Prénom:</span> Clément</p>
+						<p><span>Nom:</span> Jeandidier</p>
+						<p><span>Date de Naissance:</span> 7 mars 2005</p>
+						<p><span>Signe Astrologique</span> Poissons</p>
+						<p><span>Ville Natale:</span> Soissons</p>
+						<p><span>Etudes:</span> BUT Informatique</p>
+						<p><span>Frère et Soeur:</span> Claire(20ans)/Pierre(14ans)</p>
+					</div>
+				</div>	
+				<div class="card2" id="img2">
+					<img src="img/moi2.jpg">		
+				</div>
+				<div class="versbas">
+					<a href="#idparcours"></a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -95,6 +118,9 @@
 	            </div>
 		    </div>
 	    </div>
+		<div class="versbas">
+			<a href="#idhobbies"></a>
+		</div>
 	</section>
 
 
@@ -102,29 +128,39 @@
 	<section class="hobbies" id="idhobbies">
 		<div class="titre">
 			<h2><span>Mes</span> Hobbys</h2>
-		</div>
-		<div class="box31">
-			<div class="card3">
-				<h5>Le Tennis</h5>
-				<div class="pra">
-					<p></p>
+			<div class="box3">
+				<div class="card3">
+					<h5>Le Tennis</h5>	
+					<div class="imgparcours">
+						<img src="img/tennis.jpg" class="imgecole">
+					</div>	
+					<div class="pra">
+						<p>Le Tennis est surement le hobby qui a pris le plus de place dans ma vie quand j'étais petit. En effet j'en ai pratiqué pendant 10 ans sans m'en lassé.</p>
+					</div>
 				</div>
-            </div>
-		</div>
-		<div class="box32">
-			<div class="card3">
-				<h5>Les Jeux-vidéos</h5>
-				<div class="pra">
-					<p>Ceci est un test juste pour avoir du texte parce que flemme de trouver pour l'instant</p>
+				<div class="card3">
+					<h5>Les jeux-vidéos</h5>	
+					<div class="imgparcours">
+						<img src="img/sackboy.jpg" class="imgecole">
+					</div>
+					<div class="pra">
+						<p>Ma passion du jeu-vidéo a commencé lorsque que j'avais 10 ans avec Minecraft. Cette passion me permet de me détendre et parfois grâce au jeux vidéo j'ai réussi a gagner de l'argent notamment sur Fortnite ou bien League of Legend en faisant des compétions.</p>
+					</div>
 				</div>
-            </div>
-		</div>
-		<div class="versbas">
-			<a href="#idintelligence"></a>
-		</div>
-
-
-	</section>
+				<div class="card3">
+					<h5>L'hardware</h5>
+					<div class="imgparcours">
+						<img src="img/hardware.jpg" class="imgecole">
+					</div>
+					<div class="pra">
+						<p>J'adore me renseigné sur internet sur les différents composant d'un ordinateur. L'hardware est un passe-temps qui m'a permis d'être utile aux autres en montant des pc à des particuliers</p>
+					</div>
+				</div>
+			</div>
+			<div class="versbas">
+				<a href="#idintelligence"></a>
+			</div>
+		</section>
 	
 	<!----Mes Intelligences---->
 	<section class="intelligence" id="idintelligence">
@@ -134,23 +170,23 @@
 
 		<div class="box1">
 			<div class="card1">
-				<h5>L'écologie</h5>
+				<h5>La logique</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p></p>
 				</div>
 			</div>
 
 			<div class="card1">
-				<h5>La logique</h5>
+				<h5>L'écologie</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p></p>
 				</div>
 			</div>
 
 			<div class="card1">
 				<h5>L'interpersonnel</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p></p>
 				</div>
 			</div>
 		</div>
@@ -159,6 +195,8 @@
 		</div>
 	</section>
 
+
+	<!--Portrait Chinois-->
 	<section class="portraitchinois" id="idportraitchinois">
 		<div class="titre">
 			<h2><span>Mon</span> Portrait Chinois</h2>
@@ -217,57 +255,18 @@
 			    </div>
 		    </div>
 			<div class="card5">
-				<img src="img/moi2.jpg" class="moi2">
+				<img src="img/sakura.png" class="sakura">
 			</div>	
 	    </div>
 	</section>
 	
-	
-	
-	<!----Anecdote---->
-	<section class="anecdote" id="idanecdote" >
-		<div class="titre">
-			<h2><span>Quelques</span> Anecdotes</h2>
-		</div>
-		<div class="box2">
-			<div class="card2">
-				<div class="ecole">
-				    <h3>L'école primaire</h3>
-				        <div class="pra">
-					        <p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-						</div>
-					</div>
-			    </div>
-			<div class="image">
-				<img src="img/ecole.png" class="img1">
-			</div>	
-		</div>
-		<div class="box2">
-			<div class="card2">
-				<div class="jeux">
-				    <h3>Les jeux-vidéos</h3>
-				        <div class="pra">
-					        <p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-				        </div>
-			    </div>	
-			</div>	
-			<div class="image">
-				<img src="img/manette.png" class="img2">
-		    </div>
-		</div>
-		<div class="versbas">
-			<a href="#idaccesquiz"></a>
-		</div>
-	</section>
-
-
 	
 	<!------Acces au quiz------>
 	
 	<section class="accesquiz" id="idaccesquiz">
 		<p>Vous pouvez désormais répondre au Quiz</p>
 		<div class="bouton-deux">
-			<a href=https://kisswave.github.io/TEST/>Acceder au Quiz</a>
+			<a href=https://github.com/KiSsWave/TEST/>Acceder au Quiz</a>
 		</div>
 	</section>
 
@@ -277,9 +276,8 @@
 		<p>Clément Jeandidier</p>
 		<p>Si vous voulez en savoir d'avantage sur moi, contactez moi sur mes réseaux-sociaux</p>
 		<div class="réseaux-sociaux" id="idréseaux-sociaux">
-			<a href="#"><i class="fab fa-discord"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-github"></i></a>
+			<a href="https://discord.gg/rTY2q3xU"><i class="fab fa-discord"></i></a>
+			<a href="https://github.com/KiSsWave"><i class="fab fa-github"></i></a>
 		</div>
 		<p class="end">CopyRight Clem's</p>
 	</footer>
