--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li><a href="#idintelligence">Intelligence</a></li>
 			<li><a href="#idportraitchinois">Portrait Chinois</a></li>
 		</ul>
-		<a href=https://kisswave.github.io/TEST/ class="btn">Quiz</a>
+		<a href="https://kisswave.github.io/TEST/" class="btn">Quiz</a>
 	</nav>
 	
 	
@@ -266,7 +266,7 @@
 	<section class="accesquiz" id="idaccesquiz">
 		<p>Vous pouvez désormais répondre au Quiz</p>
 		<div class="bouton-deux">
-			<a href=https://kisswave.github.io/TEST/>Acceder au Quiz</a>
+			<a href="https://kisswave.github.io/TEST"/>Acceder au Quiz</a>
 		</div>
 	</section>
 
