--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
 	<!--Mes Intelligences-->
 	<section class="intelligence" id="idintelligence">
 		<div class="titre">
-			<h2><span>Mes</span> Intelligences</h2>
+			<h2><span>Mes</span> Intelligences Multiples</h2>
 		</div>
 
 		<div class="box1">
 			<div class="card1">
 				<h5>La logique</h5>
 				<div class="pra">
-					<p></p>
+					<p>Je pense que cette intelligence est la plus forte chez moi. En effet depuis tout petit j'ai toujours étais très logique dans ce que je fais. Je suis assez bon en casse tête et puzzle et cela me passionne depuis des annees. De plus grâce à cette intelligence, j'ai des grandes facilités en Mathématiques ce qui m'as permis de sauté la classe de CE1 </p>
 				</div>
 			</div>
 
