--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			<div class="card1">
 				<h5>La logique</h5>
 				<div class="pra">
-					<p>Je pense que cette intelligence est la plus forte chez moi. En effet depuis tout petit j'ai toujours étais très logique dans ce que je fais. Je suis assez bon en casse tête et puzzle et cela me passionne depuis des annees. De plus grâce à cette intelligence, j'ai des grandes facilités en Mathématiques ce qui m'as permis de sauté la classe de CE1 </p>
+					<p>Je pense que cette intelligence est la plus forte chez moi. En effet depuis tout petit j'ai toujours étais très logique dans ce que je fais. Je suis assez bon en casse tête et puzzle et cela me passionne depuis des annees, je penses être  organisés dans mon travail lorsque je dois résoudre un problème .De plus grâce à cette intelligence, j'ai des grandes facilités en Mathématiques ce qui m'as permis de sauté la classe de CE1. </p>
 				</div>
 			</div>
 
@@ -186,7 +186,7 @@
 			<div class="card1">
 				<h5>L'interpersonnel</h5>
 				<div class="pra">
-					<p></p>
+					<p>Cette intelligence m'as vraiment aidé dans ma vie. En effet mon essence à rentrer en contact avec un camarade ou bien lorsque je recherché un stage en 3ème m'as parmis d'avoir un très grand entourage social et cela me rend heureux. De plus je n'hésite pas à aidé les personnes qui sont potentiellement en difficultés. Lorsque je joue à un jeu-vidéo, je préfère largement jouer avec des amis que d'être seul</p>
 				</div>
 			</div>
 		</div>
