--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 			<div class="card1">
 				<h5>L'écologie</h5>
 				<div class="pra">
-					<p></p>
+					<p>Grâce à l'étude de mes intelligences les plus développés, je me suis rendu compte que l'écologie était quelque chose d'important pour moi. En effet j'essaie toujours de respecter la nature car celle-ci risque dans quelques annees. De plus j'aime bien jardiner et m'interressé aux animaux dans la terre, et j'ai une aisance à reconnaitre un parmis les autres arbres d'une forêt</p>
 				</div>
 			</div>
 
